--- a/password-reset.html
+++ b/password-reset.html
@@ -8,57 +8,105 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <style>
         body {
-            background: #f1f5f9;
+            background: #f7fafd;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
-        .recover-container {
+        .page-content {
+            flex: 1 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 70vh;
+        }
+        .form-container {
             max-width: 430px;
-            margin: 90px auto;
-            background: #fff;
-            border-radius: 14px;
-            box-shadow: 0 4px 22px rgba(74,144,226,0.09);
+            margin: 60px auto;
+            background: white;
+            padding: 36px 32px 28px 32px;
+            border-radius: 12px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.09);
             border: 1px solid #e0e0e0;
-            padding: 36px 30px 28px 30px;
         }
-        .recover-container h2 {
-            margin-bottom: 18px;
-            color: #4ab3c1;
-        }
-        .recover-container .form-group {
+        .form-container h2 {
+            color: #22b3a1;
+            font-size: 2.1em;
+            font-weight: 800;
             margin-bottom: 22px;
         }
-        .recover-container .form-group label {
+        .form-group {
+            margin-bottom: 20px;
+        }
+        .form-group label {
+            display: block;
             font-weight: 600;
             margin-bottom: 7px;
-            display: block;
         }
-        .recover-container .form-control {
+        .form-control {
             width: 100%;
             padding: 11px;
             border: 1px solid #e0e0e0;
             border-radius: 8px;
             font-size: 1rem;
         }
-        .recover-container .btn-primary {
-            width: 100%;
+        .btn-primary {
+            background: linear-gradient(90deg, #22b3a1 30%, #3979e7 85%);
+            color: white;
+            border: none;
+            border-radius: 8px;
             padding: 12px 0;
+            font-size: 1.05em;
+            font-weight: 700;
+            width: 100%;
+            cursor: pointer;
+            transition: box-shadow .2s;
+            box-shadow: 0 2px 9px rgba(34,179,161,0.09);
         }
-        .recover-container .result-message {
-            margin-top: 18px;
-            font-size: 1.05rem;
-            min-height: 22px;
-        }
-        .recover-container .result-message.success {
-            color: #008060;
-        }
-        .recover-container .result-message.error {
-            color: #e74c3c;
+        .btn-primary:hover {
+            box-shadow: 0 4px 14px rgba(34,179,161,0.14);
         }
         .back-link {
-            display: inline-block;
-            margin-top: 25px;
-            color: #4ab3c1;
+            margin-top: 18px;
+            display: block;
+            color: #3979e7;
+            font-size: 1em;
             text-decoration: underline;
-            font-size: 1rem;
+            text-align: left;
+        }
+        .cart-notification {
+            position: fixed;
+            bottom: 30px;
+            left: 50%;
+            transform: translate(-50%, 150%);
+            background-color: #00b386;
+            color: white;
+            padding: 15px 25px;
+            border-radius: 50px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            z-index: 2001;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            opacity: 0;
+            transition: all 0.4s ease-out;
+        }
+        .cart-notification.error {
+            background-color: #e74c3c;
+        }
+        .cart-notification.visible {
+            opacity: 1;
+            transform: translate(-50%, 0);
+        }
+        .cart-notification p {
+            color: white !important;
+            margin: 0;
+        }
+        @media (max-width: 500px){
+            .form-container{
+                max-width: 96vw;
+                padding: 18px 8px;
+            }
         }
     </style>
 </head>
@@ -67,29 +115,47 @@
         <nav class="navbar">
             <div class="container navbar-content">
                 <a href="index.html" class="logo">
-                    <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" style="height: 49px;">
+                    <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" style="height: 55px;">
                 </a>
+                <ul class="nav-links-list">
+                    <li><a href="index.html" class="nav-link">Inicio</a></li>
+                    <li><a href="productos.html" class="nav-link">Productos</a></li>
+                    <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+                    <li><a href="nosotros.html" class="nav-link">Nosotros</a></li>
+                    <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+                    <li><a href="faq.html" class="nav-link">Preguntas</a></li>
+                </ul>
+                <div class="navbar-right-items">
+                    <div class="navbar-user-actions" id="navbarUserActions">
+                        <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
+                        <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
+                        <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión"><i class="fas fa-sign-out-alt"></i></button>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
 
-    <main>
-        <div class="recover-container">
-            <h2>Recuperar Contraseña</h2>
-            <form id="recoverForm" autocomplete="off">
-                <div class="form-group">
-                    <label for="email">Correo electrónico</label>
-                    <input type="email" id="email" class="form-control" required placeholder="ejemplo@email.com">
+    <main class="page-content">
+        <section class="section">
+            <div class="container">
+                <div class="form-container">
+                    <h2>Recuperar Contraseña</h2>
+                    <form id="resetForm">
+                        <div class="form-group">
+                            <label for="resetEmail">Correo electrónico</label>
+                            <input type="email" id="resetEmail" class="form-control" required placeholder="ejemplo@email.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="resetPhone">Número de teléfono asociado</label>
+                            <input type="tel" id="resetPhone" class="form-control" required placeholder="Ej: 5512345678">
+                        </div>
+                        <button type="submit" class="btn-primary">Enviar contraseña temporal</button>
+                    </form>
+                    <a href="login.html" class="back-link"><i class="fas fa-arrow-left"></i> Volver a Iniciar Sesión</a>
                 </div>
-                <div class="form-group">
-                    <label for="phone">Número de teléfono asociado</label>
-                    <input type="tel" id="phone" class="form-control" required placeholder="Ej. 5512345678">
-                </div>
-                <button type="submit" class="btn btn-primary">Enviar contraseña temporal</button>
-            </form>
-            <div id="resultMessage" class="result-message"></div>
-            <a href="login.html" class="back-link"><i class="fas fa-arrow-left"></i> Volver a Iniciar Sesión</a>
-        </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
@@ -111,51 +177,60 @@
             &copy; <span id="current-year"></span> GreenHaul. Todos los derechos reservados.
         </div>
     </footer>
+    <div class="cart-notification" id="cartNotification"><p id="notificationText"></p></div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // Footer year
             document.getElementById('current-year').textContent = new Date().getFullYear();
 
-            const recoverForm = document.getElementById('recoverForm');
-            const resultMessage = document.getElementById('resultMessage');
-
-            recoverForm.addEventListener('submit', async function(e) {
-                e.preventDefault();
-                resultMessage.textContent = '';
-                resultMessage.className = 'result-message';
-
-                const email = document.getElementById('email').value.trim();
-                const phone = document.getElementById('phone').value.trim();
-
-                if (!email || !phone) {
-                    resultMessage.textContent = 'Por favor, ingresa tu correo y tu número telefónico.';
-                    resultMessage.classList.add('error');
-                    return;
+            function showNotification(message, type = 'success') {
+                const el = document.getElementById('cartNotification');
+                if (el) {
+                    el.querySelector('#notificationText').textContent = message;
+                    el.className = 'cart-notification';
+                    el.classList.add(type, 'visible');
+                    setTimeout(() => el.classList.remove('visible'), 3000);
+                } else {
+                    alert(message);
                 }
+            }
 
-                // Llamada a backend
-                try {
-                    const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
-                    const response = await fetch(`${backendUrl}/api/recover-password`, {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ email, phone })
-                    });
-                    const result = await response.json();
-                    if (response.ok) {
-                        resultMessage.textContent = result.message || 'Se ha enviado una contraseña temporal al correo indicado.';
-                        resultMessage.classList.add('success');
-                    } else {
-                        resultMessage.textContent = result.message || 'No se pudo enviar la contraseña temporal.';
-                        resultMessage.classList.add('error');
+            const resetForm = document.getElementById('resetForm');
+            if (resetForm) {
+                resetForm.addEventListener('submit', async (e) => {
+                    e.preventDefault();
+                    const email = document.getElementById('resetEmail').value;
+                    const phone = document.getElementById('resetPhone').value;
+                    const submitButton = resetForm.querySelector('button[type="submit"]');
+                    submitButton.disabled = true;
+                    submitButton.textContent = 'Enviando...';
+
+                    try {
+                        const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
+                        const response = await fetch(`${backendUrl}/api/recover-password`, {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ email, phone })
+                        });
+                        const data = await response.json();
+
+                        if (response.ok) {
+                            showNotification('¡Se ha enviado una contraseña temporal a tu correo!', 'success');
+                            resetForm.reset();
+                        } else {
+                            showNotification(data.message || 'Error al recuperar la contraseña.', 'error');
+                        }
+                    } catch (error) {
+                        showNotification('Error de conexión con el servidor.', 'error');
+                    } finally {
+                        submitButton.disabled = false;
+                        submitButton.textContent = 'Enviar contraseña temporal';
                     }
-                } catch (err) {
-                    resultMessage.textContent = 'Error al conectar con el servidor.';
-                    resultMessage.classList.add('error');
-                }
-            });
+                });
+            }
         });
     </script>
+    <script type="module" src="/assets/js/main.js"></script>
 </body>
 </html>
