cambio de dato contact

--- a/contacto.html
+++ b/contacto.html
@@ -279,8 +279,8 @@
                     <div class="contact-info-card">
                         <h4>Datos de Contacto</h4>
                         <ul class="contact-info-list">
-                            <li><i class="fas fa-envelope"></i> info@greenhauL.com</li>
-                            <li><i class="fas fa-phone-alt"></i> +52 55 1234 5678</li>
+                            <li><i class="fas fa-envelope"></i> soporte@greenhauL.com.mx</li>
+                            <li><i class="fas fa-phone-alt"></i> +52 56 5569 0681</li>
                             <li><i class="fas fa-map-marker-alt"></i> Ciudad de México</li>
                         </ul>
                     </div>
