cambio de contacto

--- a/servicios.html
+++ b/servicios.html
@@ -104,8 +104,8 @@
             <div class="footer-info">
                 <h3>greenhauL</h3>
                 <p>Mudanzas sostenibles, sin complicaciones.</p>
-                <p><i class="fas fa-phone-alt"></i> +52 55 1234 5678</p>
-                <p><i class="fas fa-envelope"></i> info@greenhauL.com</p>
+                <p><i class="fas fa-phone-alt"></i> +52 56 5569 0681</p>
+                <p><i class="fas fa-envelope"></i> soporte@greenhauL.com.mx</p>
                 <p><i class="fas fa-map-marker-alt"></i> Ciudad de México</p>
             </div>
             <div class="footer-links">
