--- a/productos.html
+++ b/productos.html
@@ -80,13 +80,14 @@
                     <!-- PAQUETE BÁSICO -->
                     <div class="product-card" data-product-id="101" data-product-price="79.00">
                         <div class="badge best-value">Paquete Básico</div>
-                        <div class="product-image" style="font-size:2.5rem;">📦</div>
+                        <div class="product-image" style="font-size:2.5rem;">📦✨</div>
                         <div class="product-info">
                             <h3>Paquete Básico</h3>
-                            <p class="description">Incluye 5 cajas chicas y 5 cajas medianas. Ideal para mudanzas pequeñas.</p>
+                            <p class="description">¡Comienza tu mudanza con todo lo esencial! Este paquete incluye 5 cajas chicas y 5 cajas medianas, perfectas para mudanzas rápidas y seguras. <span style="color:var(--accent-green);">🌱</span></p>
                             <ul class="product-features">
-                                <li>5 Cajas Cozumel 20kg (chica)</li>
-                                <li>5 Cajas HDPE 15kg (mediana)</li>
+                                <li>5 Cajas Cozumel 20kg (chica) <span>🟦</span></li>
+                                <li>5 Cajas HDPE 15kg (mediana) <span>🟩</span></li>
+                                <li>Plástico HDPE virgen, máxima resistencia y durabilidad</li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-paq-basico">Cantidad:</label>
@@ -103,15 +104,16 @@
                     <!-- PAQUETE ESTÁNDAR -->
                     <div class="product-card" data-product-id="102" data-product-price="159.00">
                         <div class="badge popular">Paquete Estándar</div>
-                        <div class="product-image" style="font-size:2.5rem;">🏠</div>
+                        <div class="product-image" style="font-size:2.5rem;">🏠🔒</div>
                         <div class="product-info">
                             <h3>Paquete Estándar</h3>
-                            <p class="description">Mudanza mediana: 5 chicas, 5 medianas, 2 grandes y 1 diablito.</p>
+                            <p class="description">¡Soluciona tu mudanza de tamaño medio! Incluye cajas chicas, medianas, grandes y un diablito para facilitar el traslado. Seguridad, espacio y comodidad. <span style="color:var(--accent-green);">🛡️</span></p>
                             <ul class="product-features">
-                                <li>5 Cajas Cozumel 20kg (chica)</li>
-                                <li>5 Cajas HDPE 15kg (mediana)</li>
-                                <li>2 Cajas PP 30L (grande)</li>
-                                <li>1 Diablito de carga</li>
+                                <li>5 Cajas Cozumel 20kg (chica) <span>🟦</span></li>
+                                <li>5 Cajas HDPE 15kg (mediana) <span>🟩</span></li>
+                                <li>2 Cajas PP 30L (grande) <span>🟥</span></li>
+                                <li>1 Diablito de carga <span>🛒</span></li>
+                                <li>Ideal para casas y departamentos medianos</li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-paq-estandar">Cantidad:</label>
@@ -128,17 +130,18 @@
                     <!-- PAQUETE PREMIUM -->
                     <div class="product-card" data-product-id="103" data-product-price="249.00">
                         <div class="badge nuevo">Paquete Premium</div>
-                        <div class="product-image" style="font-size:2.5rem;">🏡</div>
+                        <div class="product-image" style="font-size:2.5rem;">🏡💎</div>
                         <div class="product-info">
                             <h3>Paquete Premium</h3>
-                            <p class="description">Mudanza grande: 10 chicas, 10 medianas, 5 grandes, 2 diablitos, 2 cobijas y 1 cinta.</p>
+                            <p class="description">¡La opción más completa y cómoda! Perfecto para mudanzas grandes, incluye todo lo necesario para proteger tus pertenencias. <span style="color:var(--accent-green);">🎁</span></p>
                             <ul class="product-features">
-                                <li>10 Cajas Cozumel 20kg (chica)</li>
-                                <li>10 Cajas HDPE 15kg (mediana)</li>
-                                <li>5 Cajas PP 30L (grande)</li>
-                                <li>2 Diablitos de carga</li>
-                                <li>2 Cobijas de mudanza</li>
-                                <li>1 Cinta adhesiva ecológica</li>
+                                <li>10 Cajas Cozumel 20kg (chica) <span>🟦</span></li>
+                                <li>10 Cajas HDPE 15kg (mediana) <span>🟩</span></li>
+                                <li>5 Cajas PP 30L (grande) <span>🟥</span></li>
+                                <li>2 Diablitos de carga <span>🛒</span></li>
+                                <li>2 Cobijas de mudanza <span>🧺</span></li>
+                                <li>1 Cinta adhesiva ecológica <span>🧵</span></li>
+                                <li>Protección extra para tus muebles y objetos delicados</li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-paq-premium">Cantidad:</label>
@@ -156,12 +159,18 @@
                     <!-- Caja HDPE 15kg (mediana) -->
                     <div class="product-card" data-product-id="201" data-product-price="8.00">
                         <div class="badge">Caja Mediana</div>
-                        <div class="product-image" style="font-size:2.5rem;">🟩</div>
+                        <div class="product-image" style="font-size:2.5rem;">🟩📦</div>
                         <div class="product-info">
                             <h3>Caja HDPE 15kg (mediana)</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">🔹</span> Fabricada en polietileno de alta densidad virgen (HDPE), con tapa.<br>
+                                <span style="font-size:1.2em;">🛡️</span> Resistente, segura y ecológica.<br>
+                                <span style="font-size:1.2em;">📏</span> Medidas: 50.3cm x 30.0cm x 21.0cm.<br>
+                                <span style="font-size:1.2em;">⚡</span> Capacidad de carga: 15 kg. Color: Azul.
+                            </p>
                             <ul class="product-features">
-                                <li>Resistente y reutilizable</li>
-                                <li>Capacidad: 15kg</li>
+                                <li>Ideal para objetos medianos y mudanzas sostenibles <span>🌱</span></li>
+                                <li>Con tapa para máxima protección <span>🔒</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-caja-mediana">Cantidad:</label>
@@ -182,12 +191,20 @@
                     <!-- Caja Cozumel 20kg (chica) -->
                     <div class="product-card" data-product-id="202" data-product-price="7.00">
                         <div class="badge">Caja Chica</div>
-                        <div class="product-image" style="font-size:2.5rem;">🟦</div>
+                        <div class="product-image" style="font-size:2.5rem;">🟦📦</div>
                         <div class="product-info">
                             <h3>Caja Cozumel 20kg (chica)</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">🌊</span> Diseño adaptable para transportar y almacenar.<br>
+                                <span style="font-size:1.2em;">🔹</span> Fabricada en HDPE virgen, color azul.<br>
+                                <span style="font-size:1.2em;">📏</span> Medidas exteriores: 30x25x21 cm.<br>
+                                <span style="font-size:1.2em;">⚡</span> Capacidad: 20 kg. Peso: 1.0695 kg.<br>
+                                <span style="font-size:1.2em;">🛠️</span> Tapas dobles y orificios para seguros.<br>
+                                <span style="font-size:1.2em;">🏷️</span> Área para colocar etiqueta o logotipo.
+                            </p>
                             <ul class="product-features">
-                                <li>Ligera y fácil de manejar</li>
-                                <li>Capacidad: 20kg</li>
+                                <li>Enfila para ahorro de espacio <span>📚</span></li>
+                                <li>Ideal para objetos pequeños y delicados <span>🧩</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-caja-chica">Cantidad:</label>
@@ -208,12 +225,18 @@
                     <!-- Caja PP 30L (grande) -->
                     <div class="product-card" data-product-id="203" data-product-price="10.00">
                         <div class="badge">Caja Grande</div>
-                        <div class="product-image" style="font-size:2.5rem;">🟥</div>
+                        <div class="product-image" style="font-size:2.5rem;">🟥📦</div>
                         <div class="product-info">
                             <h3>Caja PP 30L (grande)</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">💪</span> Material: Polipropileno, robusta y espaciosa.<br>
+                                <span style="font-size:1.2em;">📏</span> Medidas: 58x39x19 cm.<br>
+                                <span style="font-size:1.2em;">⚡</span> Capacidad de carga: 30 lts. Peso: 1.34 kg.<br>
+                                <span style="font-size:1.2em;">🟦</span> Color tapa: Azul. Estiba: 4 piezas con producto.
+                            </p>
                             <ul class="product-features">
-                                <li>Robusta y espaciosa</li>
-                                <li>Capacidad: 30L</li>
+                                <li>Ideal para objetos grandes y voluminosos <span>🧸</span></li>
+                                <li>Gran resistencia y fácil manejo <span>🚚</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-caja-grande">Cantidad:</label>
@@ -233,12 +256,17 @@
                     <!-- Caja HDPE 10kg (alta) -->
                     <div class="product-card" data-product-id="204" data-product-price="7.00">
                         <div class="badge">Caja Alta</div>
-                        <div class="product-image" style="font-size:2.5rem;">⬛</div>
+                        <div class="product-image" style="font-size:2.5rem;">⬛📦</div>
                         <div class="product-info">
                             <h3>Caja HDPE 10kg (alta)</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">🔹</span> Fabricada en polietileno de alta densidad virgen (HDPE), con tapa.<br>
+                                <span style="font-size:1.2em;">📏</span> Medidas: 50.0cm x 30.0cm x 26.0cm.<br>
+                                <span style="font-size:1.2em;">⚡</span> Capacidad de carga: 10 kg. Color: Azul.
+                            </p>
                             <ul class="product-features">
-                                <li>Alta y resistente</li>
-                                <li>Capacidad: 10kg</li>
+                                <li>Ideal para objetos altos o frágiles <span>🍾</span></li>
+                                <li>Durabilidad y protección superior <span>🛡️</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-caja-alta">Cantidad:</label>
@@ -258,12 +286,15 @@
                     <!-- Cinta adhesiva ecológica -->
                     <div class="product-card" data-product-id="205" data-product-price="30.00">
                         <div class="badge">Accesorio</div>
-                        <div class="product-image" style="font-size:2.5rem;">🧵</div>
+                        <div class="product-image" style="font-size:2.5rem;">🧵🌎</div>
                         <div class="product-info">
                             <h3>Cinta adhesiva ecológica</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">♻️</span> 100% reciclable. Cuida el planeta mientras te mudas.<br>
+                                <span style="font-size:1.2em;">🤲</span> Venta por unidad.
+                            </p>
                             <ul class="product-features">
-                                <li>100% reciclable</li>
-                                <li>Venta por unidad</li>
+                                <li>Fácil de usar y resistente <span>✔️</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-cinta-eco">Cantidad:</label>
@@ -282,12 +313,15 @@
                     <!-- Etiquetas para caja -->
                     <div class="product-card" data-product-id="206" data-product-price="2.00">
                         <div class="badge">Accesorio</div>
-                        <div class="product-image" style="font-size:2.5rem;">🏷️</div>
+                        <div class="product-image" style="font-size:2.5rem;">🏷️🎨</div>
                         <div class="product-info">
                             <h3>Etiquetas para caja</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">🔖</span> Identifica tus cajas fácilmente.<br>
+                                <span style="font-size:1.2em;">🎨</span> Personalízalas como prefieras.
+                            </p>
                             <ul class="product-features">
-                                <li>Identifica tus cajas fácilmente</li>
-                                <li>Venta por unidad</li>
+                                <li>Venta por unidad <span>🛒</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-etiquetas">Cantidad:</label>
@@ -306,12 +340,15 @@
                     <!-- Rollo de espuma protectora -->
                     <div class="product-card" data-product-id="207" data-product-price="45.00">
                         <div class="badge">Accesorio</div>
-                        <div class="product-image" style="font-size:2.5rem;">🧽</div>
+                        <div class="product-image" style="font-size:2.5rem;">🧽🛡️</div>
                         <div class="product-info">
                             <h3>Rollo de espuma protectora</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">🛡️</span> Protección extra para objetos delicados.<br>
+                                <span style="font-size:1.2em;">🧴</span> Venta por unidad.
+                            </p>
                             <ul class="product-features">
-                                <li>Protección extra para objetos delicados</li>
-                                <li>Venta por unidad</li>
+                                <li>Evita daños en objetos frágiles <span>🧲</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-espuma">Cantidad:</label>
@@ -329,12 +366,16 @@
                     <!-- Cobija de mudanza -->
                     <div class="product-card" data-product-id="208" data-product-price="10.00">
                         <div class="badge">Accesorio</div>
-                        <div class="product-image" style="font-size:2.5rem;">🧺</div>
+                        <div class="product-image" style="font-size:2.5rem;">🧺🛏️</div>
                         <div class="product-info">
                             <h3>Cobija de mudanza</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">🧺</span> Protege muebles y objetos grandes.<br>
+                                <span style="font-size:1.2em;">🛏️</span> Renta por día.
+                            </p>
                             <ul class="product-features">
-                                <li>Protege muebles y objetos grandes</li>
-                                <li>Renta por día</li>
+                                <li>Suave y resistente <span>💪</span></li>
+                                <li>Ideal para mudanzas seguras <span>🛡️</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-cobija">Cantidad:</label>
@@ -352,12 +393,16 @@
                     <!-- Diablito de carga -->
                     <div class="product-card" data-product-id="209" data-product-price="40.00">
                         <div class="badge">Accesorio</div>
-                        <div class="product-image" style="font-size:2.5rem;">🛒</div>
+                        <div class="product-image" style="font-size:2.5rem;">🛒🚀</div>
                         <div class="product-info">
                             <h3>Diablito de carga</h3>
+                            <p class="description">
+                                <span style="font-size:1.2em;">🛒</span> Facilita el movimiento de cajas y objetos pesados.<br>
+                                <span style="font-size:1.2em;">🚀</span> Renta por día.
+                            </p>
                             <ul class="product-features">
-                                <li>Facilita el movimiento de cajas</li>
-                                <li>Renta por día</li>
+                                <li>Resistente y fácil de manejar <span>💪</span></li>
+                                <li>Ideal para mudanzas rápidas <span>⚡</span></li>
                             </ul>
                             <div class="quantity-control">
                                 <label for="qty-diablito">Cantidad:</label>
