--- a/productos.html
+++ b/productos.html
@@ -85,8 +85,8 @@
                             <h3>Paquete Básico</h3>
                             <p class="description">¡Comienza tu mudanza con todo lo esencial! Este paquete incluye 5 cajas chicas y 5 cajas medianas, perfectas para mudanzas rápidas y seguras. <span style="color:var(--accent-green);">🌱</span></p>
                             <ul class="product-features">
-                                <li>5 Cajas Cozumel 20kg (chica) <span>🟦</span></li>
-                                <li>5 Cajas HDPE 15kg (mediana) <span>🟩</span></li>
+                                <li>5 Cajas HDPE 15kg (chica) <span>🟩</span></li>
+                                <li>5 Cajas Cozumel 20kg (mediana) <span>🟦</span></li>
                                 <li>Plástico HDPE virgen, máxima resistencia y durabilidad</li>
                             </ul>
                             <div class="quantity-control">
@@ -109,8 +109,8 @@
                             <h3>Paquete Estándar</h3>
                             <p class="description">¡Soluciona tu mudanza de tamaño medio! Incluye cajas chicas, medianas, grandes y un diablito para facilitar el traslado. Seguridad, espacio y comodidad. <span style="color:var(--accent-green);">🛡️</span></p>
                             <ul class="product-features">
-                                <li>5 Cajas Cozumel 20kg (chica) <span>🟦</span></li>
-                                <li>5 Cajas HDPE 15kg (mediana) <span>🟩</span></li>
+                                <li>5 Cajas HDPE 15kg (chica) <span>🟩</span></li>
+                                <li>5 Cajas Cozumel 20kg (mediana) <span>🟦</span></li>
                                 <li>2 Cajas PP 30L (grande) <span>🟥</span></li>
                                 <li>1 Diablito de carga <span>🛒</span></li>
                                 <li>Ideal para casas y departamentos medianos</li>
@@ -135,8 +135,8 @@
                             <h3>Paquete Premium</h3>
                             <p class="description">¡La opción más completa y cómoda! Perfecto para mudanzas grandes, incluye todo lo necesario para proteger tus pertenencias. <span style="color:var(--accent-green);">🎁</span></p>
                             <ul class="product-features">
-                                <li>10 Cajas Cozumel 20kg (chica) <span>🟦</span></li>
-                                <li>10 Cajas HDPE 15kg (mediana) <span>🟩</span></li>
+                                <li>10 Cajas HDPE 15kg (chica) <span>🟩</span></li>
+                                <li>10 Cajas Cozumel 20kg (mediana) <span>🟦</span></li>
                                 <li>5 Cajas PP 30L (grande) <span>🟥</span></li>
                                 <li>2 Diablitos de carga <span>🛒</span></li>
                                 <li>2 Cobijas de mudanza <span>🧺</span></li>
@@ -156,12 +156,12 @@
                     </div>
 
                     <!-- PRODUCTOS INDIVIDUALES -->
-                    <!-- Caja HDPE 15kg (mediana) -->
+                    <!-- Caja HDPE 15kg (chica) -->
                     <div class="product-card" data-product-id="201" data-product-price="8.00">
-                        <div class="badge">Caja Mediana</div>
+                        <div class="badge">Caja Chica</div>
                         <div class="product-image" style="font-size:2.5rem;">🟩📦</div>
                         <div class="product-info">
-                            <h3>Caja HDPE 15kg (mediana)</h3>
+                            <h3>Caja HDPE 15kg (chica)</h3>
                             <p class="description">
                                 <span style="font-size:1.2em;">🔹</span> Fabricada en polietileno de alta densidad virgen (HDPE), con tapa.<br>
                                 <span style="font-size:1.2em;">🛡️</span> Resistente, segura y ecológica.<br>
@@ -173,8 +173,8 @@
                                 <li>Con tapa para máxima protección <span>🔒</span></li>
                             </ul>
                             <div class="quantity-control">
-                                <label for="qty-caja-mediana">Cantidad:</label>
-                                <select id="qty-caja-mediana" class="product-qty form-control">
+                                <label for="qty-caja-chica">Cantidad:</label>
+                                <select id="qty-caja-chica" class="product-qty form-control">
                                     <option value="" disabled selected>Selecciona</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -188,12 +188,12 @@
                             <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
                         </div>
                     </div>
-                    <!-- Caja Cozumel 20kg (chica) -->
+                    <!-- Caja Cozumel 20kg (mediana) -->
                     <div class="product-card" data-product-id="202" data-product-price="7.00">
-                        <div class="badge">Caja Chica</div>
+                        <div class="badge">Caja Mediana</div>
                         <div class="product-image" style="font-size:2.5rem;">🟦📦</div>
                         <div class="product-info">
-                            <h3>Caja Cozumel 20kg (chica)</h3>
+                            <h3>Caja Cozumel 20kg (mediana)</h3>
                             <p class="description">
                                 <span style="font-size:1.2em;">🌊</span> Diseño adaptable para transportar y almacenar.<br>
                                 <span style="font-size:1.2em;">🔹</span> Fabricada en HDPE virgen, color azul.<br>
@@ -207,8 +207,8 @@
                                 <li>Ideal para objetos pequeños y delicados <span>🧩</span></li>
                             </ul>
                             <div class="quantity-control">
-                                <label for="qty-caja-chica">Cantidad:</label>
-                                <select id="qty-caja-chica" class="product-qty form-control">
+                                <label for="qty-caja-mediana">Cantidad:</label>
+                                <select id="qty-caja-mediana" class="product-qty form-control">
                                     <option value="" disabled selected>Selecciona</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
